<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/contaner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/NameTextView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/Name"
            android:textSize="10pt">

        </TextView>

        <EditText
            android:id="@+id/NameEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/NameText"
            android:inputType="textPersonName">

        </EditText>


        <TextView
            android:id="@+id/StartTextView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/Start"
            android:textSize="10pt">

        </TextView>


        <fragment
            android:id="@+id/place_autocomplete_fragment_start"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            android:layout_width="match_parent"
            android:layout_height="50dp" />


        <TextView
            android:id="@+id/EndTextView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/End"
            android:textSize="10pt">

        </TextView>

        <fragment
            android:id="@+id/place_autocomplete_fragment_end"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/DateTextView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/DateText"
            android:textSize="10pt">

        </TextView>

        <DatePicker
            android:id="@+id/tripDatePicker"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:endYear="2100"
            android:startYear="1900"
            android:visibility="gone">

        </DatePicker>

        <!--<TimePicker-->
            <!--android:id="@+id/tripTimePicker"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="200dp"-->
            <!--android:endYear="2100"-->
            <!--android:startYear="1900"-->
            <!--android:visibility="gone"-->
            <!--&gt;-->

        <!--</TimePicker>-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btn_date"
            android:text="date"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btn_time"
            android:text="Time"
            />
        <CheckBox
            android:id="@+id/OneDirection"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="@string/OneTripDirection" />

        <CheckBox
            android:id="@+id/TowDirection"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:checked="true"
            android:text="@string/TowTripDirection" />

        <TextView
            android:id="@+id/CommentTextView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/Comment"
            android:textSize="10pt">

        </TextView>

        <EditText
            android:id="@+id/CommentEditText"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:hint="@string/CommentText"
            android:inputType="textMultiLine"
            android:lines="5">

        </EditText>

        <Button
            android:id="@+id/AddButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="sendTripInfo"
            android:text="@string/Add">
        </Button>

    </LinearLayout>

</ScrollView>
