<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">


            <TextView
                android:id="@+id/tripName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/str_tripName"
                />

            <TextView
                android:id="@+id/tripstrPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tripName"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/str_strpoint"
                />

            <TextView
                android:id="@+id/tripendPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tripstrPoint"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/str_endpoint"
                 />

            <TextView
                android:id="@+id/tripDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tripendPoint"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/str_dateTime"
                 />

            <TextView
                android:id="@+id/tripStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tripDateTime"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/str_tripstatus"
                />

            <TextView
                android:id="@+id/tripDirStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tripStatus"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/str_direction"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>



</LinearLayout>